--- a/Backend/auth-service/src/main/resources/application.properties
+++ b/Backend/auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=library-management-system
+spring.application.name=auth-service
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=root
@@ -13,4 +13,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-server.port=8080
+server.port=8081
