--- a/Backend/auth-service/build.gradle
+++ b/Backend/auth-service/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.json:json:20231013'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'last.project:lms:0.0.1'
