--- a/Backend/user-service/src/main/resources/application.properties
+++ b/Backend/user-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=auth-service
+spring.application.name=user-service
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres:5432/lms
 spring.datasource.username=root
 spring.datasource.password=root
 
