--- a/Backend/lend-service/src/main/resources/application.properties
+++ b/Backend/lend-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=lend-service
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/lms
+spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username=root
 spring.datasource.password=root
 
