--- a/Backend/lms/src/main/resources/application.properties
+++ b/Backend/lms/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=library-management-system
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/lms
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=root
 spring.datasource.password=root
 
