--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: lms
+      POSTGRES_DB: postgres
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
     networks:
