--- a/Backend/lms/build.gradle
+++ b/Backend/lms/build.gradle
@@ -23,6 +23,9 @@ dependencies {
 
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation("com.github.javafaker:javafaker:1.0.2"){ exclude module : "snakeyaml" }
+
 }
 
 tasks.named('test') {
